# asceticism

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: bump-version.yml  deploy.yml  workflow.yml
scripts/: delpyc.sh
src/backend/: .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  pyproject.toml
src/backend/asceticism/: alembic.ini  create_superuser.py  main.py  update_asces.py
src/backend/asceticism/alembic/: env.py
src/backend/asceticism/alembic/versions/: 00e71138a48e_migration.py  143443efc378_.py  50b1c18f48f4_add_ascesa.py  5a18bbc09a6b_migration.py  b3c42d2bfea8_migration.py  b7c15f51646a_migration.py  b9073c68ebf1_migration.py  c575fcc3f85a_change_field_author.py  e1e7deebf6fe_migration.py  fb9756ba219f_migration.py
src/backend/asceticism/api/api_v1/routers/: asces.py  auth.py  users.py
src/backend/asceticism/core/: auth.py  config.py  oauth.py  security.py
src/backend/asceticism/db/: crud.py  models.py  schemas.py  session.py
src/builds/local/: .env.local  docker-compose.yml  runservices.sh
src/builds/local/crontab/: Dockerfile
src/builds/server/: docker-compose.yml  nginx.conf
src/builds/server/nginx/: back.conf  front.conf
src/builds/server/nginx_front/: front.conf
src/frontend/: .eslintrc.cjs  .prettierrc  Dockerfile  check.html  index.html  package-lock.json  package.json  prepare.sh
src/frontend/.husky/: commit-msg  pre-commit
src/frontend/src/: App.jsx  Routes.jsx  api.js  config.js  main.jsx  style.scss
src/frontend/src/api/: api.js  base.js
src/frontend/src/auth/: auth.js
(+28 files in other folders)
